# MTEngineSDLDummyApp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  build-parallels-linux.sh  build-windows.ps1  build-windows.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
claude/architecture/: testing.md
platform/MacOS/MTEngineSDLDummyApp.xcodeproj/: project.pbxproj
platform/MacOS/MTEngineSDLDummyApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/MacOS/MTEngineSDLDummyApp.xcodeproj/xcshareddata/xcschemes/: MTEngineSDLDummyApp.xcscheme
platform/MacOS/MTEngineSDLDummyApp.xcodeproj/xcuserdata/mars.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
platform/MacOS/MTEngineSDLDummyApp.xcodeproj/xcuserdata/mars.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/Windows/: MTEngineSDLDummyApp.sln
platform/Windows/MTEngineSDLDummyApp/: MTEngineSDLDummyApp.vcxproj  MTEngineSDLDummyApp.vcxproj.filters
src/: DummyInit.cpp  DummyInit.h
src/Tests/: CDummyAppTestSuite.cpp  CDummyAppTestSuite.h  CImGuiDummyTests.cpp  CTestAppStartup.cpp  CTestAppStartup.h
src/Views/: CMainMenuBar.cpp  CMainMenuBar.h  CViewDummyAppMain.cpp  CViewDummyAppMain.h
tests/: run_test.sh
